# haskell-chart

./: .gitignore  cabal.project  flake.nix
chart/: Chart.cabal
chart/Graphics/Rendering/Chart/: Plot.hs
chart/Graphics/Rendering/Chart/Plot/: HeatMap.hs  Heatmap.hs
test/: main.hs  test.cabal
